# toolfront

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.docs  LICENSE  README.md  SECURITY.md  SUPPORT.md  _config.yml  changelog.md  docker-compose.integration.yml  flake.nix  index.html  justfile  mkdocs.yml  polygon.json  pyproject.toml  shell.nix  test.py  zensical.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  release-cli.yml  release-crates.yml  ssh-integration-test.yml  test.yml
binaries/statespace-cli/: Cargo.toml
binaries/statespace-cli/src/: args.rs  config.rs  error.rs  gateway.rs  identifiers.rs  main.rs  names.rs  state.rs
binaries/statespace-cli/src/commands/: app.rs  auth.rs  mod.rs  org.rs  serve.rs  ssh.rs  ssh_config.rs  ssh_key.rs  ssh_keys.rs  sync.rs  tokens.rs
binaries/statespace-cli/src/gateway/: auth.rs  client.rs  environments.rs  mod.rs  organizations.rs  ssh.rs  tokens.rs  types.rs
core/: AGENTS.md  Cargo.toml  shell.nix
core/crates/statespace-cli/: Cargo.toml
core/crates/statespace-cli/src/: args.rs  config.rs  error.rs  main.rs
core/crates/statespace-cli/src/commands/: app.rs  mod.rs  tokens.rs
core/crates/statespace-cli/src/gateway/: client.rs  mod.rs  types.rs
core/crates/statespace-server/: Cargo.toml  README.md
core/crates/statespace-server/src/: content.rs  error.rs  executor.rs  frontmatter.rs  init.rs  lib.rs  main.rs  protocol.rs  security.rs  server.rs  spec.rs  templates.rs  tools.rs  validation.rs
core/crates/statespace-tool-runtime/: Cargo.toml
core/crates/statespace-tool-runtime/src/: error.rs  executor.rs  frontmatter.rs  protocol.rs  security.rs  spec.rs  tools.rs  validation.rs
crates/statespace-server/: Cargo.toml  README.md
crates/statespace-server/src/: content.rs  error.rs  init.rs  lib.rs  server.rs  templates.rs
crates/statespace-tool-runtime/: Cargo.toml  README.md
crates/statespace-tool-runtime/src/: executor.rs  frontmatter.rs  lib.rs  protocol.rs  security.rs  spec.rs  tools.rs  validation.rs
docs/: Dockerfile  deploy.sh  fly.toml  index copy.md  index.md
docs/assets/css/: custom.css
docs/assets/js/: analytics.js  gtag-init.js  marquee.js
docs/design/: 001-statespace-server.md
docs/documentation/: api.md  browser.md  document.md  environments.md  mcp.md  retrieval.md
docs/documentation/ai_models/: anthropic.md  azure.md  bedrock.md  cohere.md  deepseek.md  fireworks.md  github.md  google.md  groq.md  heroku.md  huggingface.md  index.md  mistral.md  moonshot.md  ollama.md  openai.md  openrouter.md  together.md  xai.md
docs/documentation/databases/: bigquery.md  clickhouse.md  databricks.md  druid.md  duckdb.md  flink.md  mssql.md  mysql.md  oracle.md  postgresql.md  pyspark.md  risingwave.md  snowflake.md  sqlite.md  trino.md
docs/examples/: crm-integration.md  database-mcp.md  dataset-exports.md  document_rag.md  invoice-processing.md  text2sql.md
docs/overrides/: main.html
docs/pages/: ai_models.md  browser_mcp.md  database_cli.md  documentation.md  example.md  faq.md  installation.md  mcp_server.md  python_sdk.md  toolfront_cloud.md
docs/pages/applications/: api.md  architecture.md  deploy.md  overview.md  tools.md
docs/pages/community/: contributing.md  faq.md
docs/pages/concepts/: applications.md  mcp_server.md  python_sdk.md
docs/pages/connect/: api.md  coding_agents.md  custom_agents.md
docs/pages/deploy/: cloud.md  self_hosting.md  tokens.md
docs/pages/develop/: apps.md  instructions.md  tools.md
docs/pages/documentation/: applications.md  mcp_server.md  python_sdk.md
docs/pages/getting_started/: example.md  installation.md  overview.md
docs/pages/guides/: cli.md  cloud_api.md  mcp_server.md  python_sdk.md
docs/pages/home/: faq.md  roadmap.md
docs/pages/mcp/: setup.md
docs/pages/reference/: app_server.md  commands.md  toolfront_cloud.md
docs/pages/sdk/: ai_models.md  structured_outputs.md
docs/reference/: api.md  browser.md  database.md  document.md
docs/reference/commands/: browser.md  database.md  document.md
examples/: README.md  basic.py  invoice_processing_workflow.py  pdf_extraction.py  raw_dataframe.py
legacy/scripts/: install.sh
scripts/: docker-build.sh  install.sh  release.sh
src/cli/: app.py  main.py
src/toolfront/: __init__.py  application.py  browser.py  cache.py  config.py  environment.py  main.py  mcp.py  ssh.py  storage.py  tools.py  types.py  utils.py
src/toolfront/cli/: ask.py  database.py  delete.py  deploy.py  list.py  mcp.py  serve.py  tokens.py  update.py
src/toolfront/commands/: __init__.py  browser.py  database.py  document.py
src/toolfront/instructions/: ask.txt  query.txt
src/toolfront/lib/: config.py  gateway.py
src/toolfront/models/: api.py  base.py  browser.py  connection.py  database.py  document.py  endpoint.py  library.py  query.py  request.py  spec.py  table.py  url.py
src/toolfront/templates/: __init__.py  agents.md  index.html
src/toolfront/tools/: __init__.py  api.py  database.py  library.py
tests/: conftest.py
tests/integration/: Dockerfile.ssh-bastion  Dockerfile.test  conftest.py  demo.py  init-db.sql  run_integration_test.sh  ssh-setup.sh  test_data_serialization.py  test_database_connectivity.py  test_e2e_deploy.py  test_sqlserver_features.py  test_ssh_tunneling.py  test_tools_integration.py
tests/integration/test-repo/: AGENTS.md  README.md  STATUS.md  tokens.db
tests/integration/test-repo-nested/: README.md  index.html
tests/unit/: __init__.py  test_api_auth.py  test_cli.py  test_connection.py  test_database_security.py  test_databricks.py  test_dataframe_functionality.py  test_deploy.py  test_discover_masking.py  test_factory.py  test_gateway.py  test_models.py  test_pattern_matching_simple.py  test_return_type_defaults.py  test_sqlserver.py  test_ssh.py  test_structured_urls.py  test_utils.py
(+49 files in other folders)
