[package]
name = "statespace-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Statespace command-line interface"

[[bin]]
name = "statespace"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
dirs = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Browser opening
open = "5"

# Interactive prompts
inquire = "0.7"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
