[package]
name = "statespace-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Statespace command-line interface"

[[bin]]
name = "statespace"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
dirs = { workspace = true }

axum = { workspace = true }
statespace-server = { workspace = true }

tokio = { workspace = true }

reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

chrono = { workspace = true }

thiserror = { workspace = true }

open = "5"

inquire = "0.7"
base64.workspace = true
sha2 = "0.10.9"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
