[package]
name = "statespace-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Statespace CLI - manage and deploy AI tool applications"
readme = "../../README.md"
keywords = ["ai", "tools", "cli", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "statespace"
path = "src/main.rs"

[dependencies]
# Internal crates
statespace-server = { path = "../statespace-server" }
statespace-tool-runtime = { path = "../statespace-tool-runtime" }

# CLI
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web/async (for local server)
axum.workspace = true
tokio.workspace = true

# HTTP client (for gateway API)
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
chrono.workspace = true

[lints]
workspace = true
